tests/NormalTests/paczka1/fuzzy1/58738995.err
Error in line 5: XZFt S764 57,6
Error in line 17: A916 S764 49,6
Error in line 14: 9TjK345hTf S764 21,5
Error in line 1: VCMPcXvdm6E A828 16,4
Error in line 30: 9TjK345hTf A828 72,8
Error in line 34: VCMPcXvdm6E S764 31,0
